# cologne2

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt
resources/: glowCube.glb  scene.glb
resources/shaders/: brdf.frag  debug.frag  debug.vert  environment.frag  environment.vert  framebufferoutput.frag  framebufferoutput.vert  gbuffer.frag  gbuffer.vert  indirect.comp  irradiance.frag  lit.frag  lit.vert  mipmap.comp  particle_render.frag  particle_render.vert  particle_sim.comp  prefilter.frag  probe_debug.frag  probe_debug.vert  probe_g_buffer.frag  probe_g_buffer.vert  probe_lit.comp  raymarch.frag  shadowmap.frag  shadowmap.geom  shadowmap.vert  shadowmap2.frag  shadowmap2.geom  shadowmap2.vert  skybox.frag  skybox.vert  stochastic.frag  stochastic.vert  text.frag  text.vert  voxel_visual.frag  voxel_visual.vert  voxelize.frag  voxelize.geom  (+3 more)
src/: gpch.cpp  gpch.h  main.cpp
src/engine/: AABB.h  Audio.cpp  Audio.h  Camera.cpp  Camera.h  Color.h  DebugUI.cpp  DebugUI.h  Engine.cpp  Engine.h  EventManager.cpp  EventManager.h  FileUtil.cpp  FileUtil.h  Input.cpp  Input.h  Log.cpp  Log.h  Physics.cpp  Physics.h  Player.cpp  Player.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Time.h  Transform.h  Types.h  Util.cpp  Util.h  Window.cpp  Window.h  imguiThemes.h  openglErrorReporting.cpp
src/engine/renderer/: ComputeShader.cpp  ComputeShader.h  CubeMap.cpp  CubeMap.h  DebugRenderer.cpp  DebugRenderer.h  DebugScope.h  ElementBuffer.h  FrameBuffer.cpp  FrameBuffer.h  GBuffer.cpp  GBuffer.h  GeometryPass.cpp  HDRTexture.cpp  HDRTexture.h  IndirectPass.cpp  Light.h  LightingPass.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PBO.cpp  PBO.h  Particles.cpp  Particles.h  PrimitiveDrawing.cpp  Probe.cpp  Probe.h  RadiancePass.cpp  Renderer.cpp  Renderer.h  SSBO.cpp  SSBO.h  Shader.cpp  Shader.h  ShadowMap.cpp  ShadowMap.h  ShadowPass.cpp  (+12 more)
